# money-managing-app

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_08_1016-6625846337dd_small_changes.py  2024_04_08_1030-5335ed34ea2a_operation_table.py
backend/: Dockerfile  docker-compose.test.yml  docker-compose.yml
backend/alembic/versions/: 2024_03_26_1216-3f3ddb3de0a6_user_table.py  2024_04_05_1233-75f073ed97dd_main_tables.py  2024_04_09_1401-da40b5c07776_account_image_url_nullable_true.py
backend/src/: main.py
backend/src/api_v1/: currency.py  routers.py  savings_account.py  sub_category.py
backend/src/auth/: schemas.py
backend/src/repositories/: category.py  operation.py  savings_account.py  sub_category.py
backend/src/schemas/: operation.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_category.py  test_operation.py
src/: config.py  database.py  main.py  models.py
src/api_v1/: account.py  category.py  operation.py  routers.py
src/app/: router.py  schemas.py
src/auth/: auth.py  manager.py
src/repositories/: account.py  currency.py
src/schemas/: account.py  category.py  currency.py  savings_account.py  sub_category.py
src/services/: savings_account.py
src/utils/: repository.py  unitofwork.py
tests/: conftest.py  test_account.py  test_auth.py  test_currency.py  test_savings_account.py  test_sub_category.py
